--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
 
 		<div class="third"></div>
 		<div class="smallwhitebox"></div>
+
+		<div class="threeboxes"></div>
+		<div class="threeboxes"></div>
+		<div class="threeboxes"></div>
+	</div>
+
+	<div class="fourth"></div>
+	<div class="fifth">
+		<div class="firstwhitebox"></div>
+		<div class="bigwhiteboxes"></div>
+		<div class="bigwhiteboxes"></div>
+		<div class="bigwhiteboxes"></div>
+		<div class="bigwhiteboxes"></div>
+		<div class="bigwhiteboxes"></div>
+	</div>
+
+	<div class="sixth">
+		<div class="seventh"></div>
 	</div>
 </body>
 </html>
