final final completed homework 1

--- a/index.html
+++ b/index.html
@@ -33,5 +33,22 @@
 	<div class="sixth">
 		<div class="seventh"></div>
 	</div>
+	<div class="bottom">
+		<div class="text">
+			<ul>
+				<li>Apps</li>
+				<li>Themes</li>
+				 <li>Support</li>
+				 <li>Blog</li>
+				 <li> VIP</li>
+				 <li> Discover</li>
+				 <li> About Us</li>
+				 <li> Terms of Service</li>
+				 <li> Privacy</li>
+				 <li>Language</li>
+			</ul> 
+		</div>
+		<div class="lastwhitebox"></div>
+	</div>
 </body>
 </html>
