--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
 </head>
 <body>
 	<div class="first">
-		
+
+		<div class="toprightbox"></div>
+		<div class="topleftsquare"></div>
+		<div class="topleftrec"></div>
+		<div class="topleftrec"></div>
+
 	</div>
+	
 	<div class="second">
 		<p>Create your own website for free</p>
 		<p1>WordPress.com is the best place for your personal blog or business site.</p1>
@@ -22,12 +28,24 @@
 
 	<div class="fourth"></div>
 	<div class="fifth">
-		<div class="firstwhitebox"></div>
-		<div class="bigwhiteboxes"></div>
-		<div class="bigwhiteboxes"></div>
-		<div class="bigwhiteboxes"></div>
-		<div class="bigwhiteboxes"></div>
-		<div class="bigwhiteboxes"></div>
+		<div class="firstwhitebox">
+			<div class="firstgreysquares"></div>
+		</div>
+		<div class="bigwhiteboxes">
+			<div class="greysquares"></div>
+		</div>
+		<div class="bigwhiteboxes">
+			<div class="greysquares"></div>
+		</div>
+		<div class="bigwhiteboxes">
+			<div class="greysquares"></div>
+		</div>
+		<div class="bigwhiteboxes">
+			<div class="greysquares"></div>
+		</div>
+		<div class="bigwhiteboxes">
+			<div class="greysquares"></div>
+		</div>
 	</div>
 
 	<div class="sixth">
