stage 2 almost done

--- a/index.html
+++ b/index.html
@@ -29,22 +29,34 @@
 	<div class="fourth"></div>
 	<div class="fifth">
 		<div class="firstwhitebox">
-			<div class="firstgreysquares"></div>
+			<div class="firstgreysquare"></div>
+			<div class="slimgreyrec"></div>
+			<div class="fatgreyrec"></div>
 		</div>
 		<div class="bigwhiteboxes">
 			<div class="greysquares"></div>
+			<div class="slimgreyrec"></div>
+			<div class="fatgreyrec"></div>
 		</div>
 		<div class="bigwhiteboxes">
 			<div class="greysquares"></div>
+			<div class="slimgreyrec"></div>
+			<div class="fatgreyrec"></div>
 		</div>
 		<div class="bigwhiteboxes">
 			<div class="greysquares"></div>
+			<div class="slimgreyrec"></div>
+			<div class="fatgreyrec"></div>
 		</div>
 		<div class="bigwhiteboxes">
 			<div class="greysquares"></div>
+			<div class="slimgreyrec"></div>
+			<div class="fatgreyrec"></div>
 		</div>
 		<div class="bigwhiteboxes">
 			<div class="greysquares"></div>
+			<div class="slimgreyrec"></div>
+			<div class="fatgreyrec"></div>
 		</div>
 	</div>
 
