--- a/index.html
+++ b/index.html
@@ -21,9 +21,18 @@
 		<div class="third"></div>
 		<div class="smallwhitebox"></div>
 
-		<div class="threeboxes"></div>
-		<div class="threeboxes"></div>
-		<div class="threeboxes"></div>
+		<div class="threeboxes">
+			<div class="bottomleftzig"></div>
+			<div class="toprightzag"></div>
+		</div>
+		<div class="threeboxes">
+			<div class="bottomleftzig"></div>
+			<div class="toprightzag"></div>
+		</div>
+		<div class="threeboxes">
+			<div class="bottomleftzig"></div>
+			<div class="toprightzag"></div>
+		</div>
 	</div>
 
 	<div class="fourth"></div>
