day 3 first changes

--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html>
 <head>
 <link type="text/css" rel="stylesheet" href="style.css"/>
-	<title></title>
+	<title>Wordpress Mobile</title>
 </head>
 <body>
 	<div class="first">
 
-		<div class="toprightbox"></div>
+		<div class="toprightbox">Log In</div>
 		<div class="topleftsquare"></div>
-		<div class="topleftrec"></div>
-		<div class="topleftrec"></div>
+		<div class="topleftrec"><span>Wordpress</span>.com</div>
+		
 
 	</div>
 	
 	<div class="second">
 		<p>Create your own website for free</p>
-		<p1>WordPress.com is the best place for your personal blog or business site.</p1>
+		<p class="smalltext">WordPress.com is the best place for your personal blog or business site.</p>
 
-		<div class="third"></div>
+		<div class="third">Create Website</div>
 		<div class="smallwhitebox"></div>
 
 		<div class="threeboxes">
