--- a/index.html
+++ b/index.html
@@ -22,16 +22,25 @@
 		<div class="smallwhitebox"></div>
 
 		<div class="threeboxes">
-			<div class="bottomleftzig"></div>
-			<div class="toprightzag"></div>
+			<div class="toprightzag">
+				Ready for mobile
+				<span>Download the iOS or Android app</span>
+			</div>
+			<div class="leftsquare"></div>
 		</div>
 		<div class="threeboxes">
-			<div class="bottomleftzig"></div>
-			<div class="toprightzag"></div>
+			<div class="toprightzag">
+				Freshly Pressed 
+				<span>Strong voices from around the world</span>
+			</div>
+			<div class="leftsquare"></div>
 		</div>
 		<div class="threeboxes">
-			<div class="bottomleftzig"></div>
-			<div class="toprightzag"></div>
+			<div class="toprightzag">
+				Hundreds of designs
+				<span>Find your unique style</span>
+			</div>
+			<div class="leftsquare"></div>
 		</div>
 	</div>
 
