--- a/index.html
+++ b/index.html
@@ -44,42 +44,42 @@
 		</div>
 	</div>
 
-	<div class="fourth"></div>
+	<div class="fourth">WordPress.com is the easiest way to create a free website or blog. It's a powerful hosting platform that grows with you.</div>
 	<div class="fifth">
 		<div class="firstwhitebox">
 			<div class="firstgreysquare"></div>
-			<div class="slimgreyrec"></div>
-			<div class="fatgreyrec"></div>
+			<div class="slimgreyrec">Easy to use</div>
+			<div class="fatgreyrec">WordPress.com lets you create beautiful and powerful websites or blogs.</div>
 		</div>
 		<div class="bigwhiteboxes">
 			<div class="greysquares"></div>
-			<div class="slimgreyrec"></div>
-			<div class="fatgreyrec"></div>
+			<div class="slimgreyrec">Your own domain name</div>
+			<div class="fatgreyrec">We'll set up and configure your custom domain so that you can start using it in seconds.</div>
 		</div>
 		<div class="bigwhiteboxes">
 			<div class="greysquares"></div>
-			<div class="slimgreyrec"></div>
-			<div class="fatgreyrec"></div>
+			<div class="slimgreyrec">Search engine and SEO friendly	</div>
+			<div class="fatgreyrec">WordPress.com is optimized for SEO and getting your site in front of searchers on Google, Bing, Yahoo, and others.</div>
 		</div>
 		<div class="bigwhiteboxes">
 			<div class="greysquares"></div>
-			<div class="slimgreyrec"></div>
-			<div class="fatgreyrec"></div>
+			<div class="slimgreyrec">The best support</div>
+			<div class="fatgreyrec">Our Happiness Engineers work night and day through live chat, email, support pages, and forums to answer any questions you may have.</div>
 		</div>
 		<div class="bigwhiteboxes">
 			<div class="greysquares"></div>
-			<div class="slimgreyrec"></div>
-			<div class="fatgreyrec"></div>
+			<div class="slimgreyrec">Premium plans</div>
+			<div class="fatgreyrec">Our premium plans give you more conrol with additional customization options. They all come with free trials.</div>
 		</div>
 		<div class="bigwhiteboxes">
 			<div class="greysquares"></div>
-			<div class="slimgreyrec"></div>
-			<div class="fatgreyrec"></div>
+			<div class="slimgreyrec">Millions of users</div>
+			<div class="fatgreyrec">We welcome 50,000 new sites every day. From small business sites, artist portfolios, and blogs, to giant media organizations like TIME and CNN.</div>
 		</div>
 	</div>
 
-	<div class="sixth">
-		<div class="seventh"></div>
+	<div class="sixth">WordPress powers 23% of the internet
+		<div class="seventh">Create Website</div>
 	</div>
 	<div class="bottom">
 		<div class="text">
