halfway through stage 4

--- a/index.html
+++ b/index.html
@@ -19,28 +19,30 @@
 		<p class="smalltext">WordPress.com is the best place for your personal blog or business site.</p>
 
 		<div class="third">Create Website</div>
-		<div class="smallwhitebox"></div>
+		<div class="smallwhitebox">&#8964;</div>
 
 		<div class="threeboxes">
 			<div class="toprightzag">
 				Ready for mobile
 				<span>Download the iOS or Android app</span>
 			</div>
-			<div class="leftsquare"></div>
+			<div id="box1"></div>
 		</div>
+
 		<div class="threeboxes">
 			<div class="toprightzag">
 				Freshly Pressed 
 				<span>Strong voices from around the world</span>
 			</div>
-			<div class="leftsquare"></div>
+			<div id="box2"></div>
 		</div>
+		
 		<div class="threeboxes">
 			<div class="toprightzag">
 				Hundreds of designs
 				<span>Find your unique style</span>
 			</div>
-			<div class="leftsquare"></div>
+			<div id="box3"></div>
 		</div>
 	</div>
 
