--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</div>
 			<div id="box2"></div>
 		</div>
-		
+
 		<div class="threeboxes">
 			<div class="toprightzag">
 				Hundreds of designs
@@ -54,27 +54,27 @@
 			<div class="fatgreyrec">WordPress.com lets you create beautiful and powerful websites or blogs.</div>
 		</div>
 		<div class="bigwhiteboxes">
-			<div class="greysquares"></div>
+			<div class="greysquare2"></div>
 			<div class="slimgreyrec">Your own domain name</div>
 			<div class="fatgreyrec">We'll set up and configure your custom domain so that you can start using it in seconds.</div>
 		</div>
 		<div class="bigwhiteboxes">
-			<div class="greysquares"></div>
+			<div class="greysquare3"></div>
 			<div class="slimgreyrec">Search engine and SEO friendly	</div>
 			<div class="fatgreyrec">WordPress.com is optimized for SEO and getting your site in front of searchers on Google, Bing, Yahoo, and others.</div>
 		</div>
 		<div class="bigwhiteboxes">
-			<div class="greysquares"></div>
+			<div class="greysquare4"></div>
 			<div class="slimgreyrec">The best support</div>
 			<div class="fatgreyrec">Our Happiness Engineers work night and day through live chat, email, support pages, and forums to answer any questions you may have.</div>
 		</div>
 		<div class="bigwhiteboxes">
-			<div class="greysquares"></div>
+			<div class="greysquare5"></div>
 			<div class="slimgreyrec">Premium plans</div>
 			<div class="fatgreyrec">Our premium plans give you more conrol with additional customization options. They all come with free trials.</div>
 		</div>
 		<div class="bigwhiteboxes">
-			<div class="greysquares"></div>
+			<div class="greysquare6"></div>
 			<div class="slimgreyrec">Millions of users</div>
 			<div class="fatgreyrec">We welcome 50,000 new sites every day. From small business sites, artist portfolios, and blogs, to giant media organizations like TIME and CNN.</div>
 		</div>
